--- a/index.html
+++ b/index.html
@@ -1,5 +1,64 @@
-<!DOCYTPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-  </head>
+        <head>
+                <meta charset="utf-8">
+                <link rel="icon" href="img/favicon_white_background.ico">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
+                <title>Juncos Hollinger Racing</title>
+                <link rel="stylesheet" href="styles.css">
+                <link rel="preconnect" href="https://fonts.googleapis.com">
+                <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+        </head>
+        <body>
+                <div id="border">
+                        <div id="outside_border"></div>
+                        <div id="display_border">
+                                <div id="display">
+                                        <div id="top_bar">
+                                                <img id="top_logo" src="main_logo.png" style="height: 40px;">
+                                                <div id="page_selection">
+                                                        <ul>
+                                                                <li>Home</li>
+                                                                <li>Cars</li>
+                                                                <li>2023</li>
+                                                                <li>Team</li>
+                                                                <li>Store</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
+                                        <div id="window_border">
+                                                <div id="window"></div>
+                                        </div>
+                                        <div id="footer">
+                                                <div id="trademark">
+                                                        <p>© 2023 Juncos Hollinger Racing Inc. All rights reserved.</p>
+                                                </div>
+                                                <div id="social_bar">
+                                                        <ul>
+                                                                <li>TT</li>
+                                                                <li>IG</li>
+                                                                <li>TW</li>
+                                                                <li>FB</li>
+                                                                <li>SC</li>
+                                                                <li id="position_display" style="color: white;">0</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+                <div id="content">
+                        <div id="left_wall">
+                                <div id="left_wall_text">
+                                        <p>what is</p>
+                                        <p class="lightgreen">possible</p>
+                                        <p class="lightgray">in 2023?</p>
+                                </div>
+                        </div>
+                        <div id="right_wall"></div>
+                        <div id="title" class="lightgreen"><p>anything.</p></div>
+                </div>
+        </body>
+        <script src="script.js"></script>
 </html
